--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="EFData\ContactsInfoDao.cs" />
     <Compile Include="EFData\CustomerDao.cs" />
     <Compile Include="EFData\EFProductCategoryDao.cs" />
+    <Compile Include="EFData\GoodsDao.cs" />
     <Compile Include="EFData\PermissionDao.cs" />
     <Compile Include="EFData\ProjectContext.cs" />
     <Compile Include="EFData\RoleDao.cs" />
