--- a/Solution/ContosoProject/Domain/Domain.csproj
+++ b/Solution/ContosoProject/Domain/Domain.csproj
@@ -45,7 +45,7 @@
     <Compile Include="DAO\IDAO\IGoodsRepository.cs" />
     <Compile Include="DAO\IDAO\IGoodsRowRepository.cs" />
     <Compile Include="DAO\IDAO\IOrderRepository.cs" />
-    <Compile Include="DAO\IDAO\IOrderStstusRepository.cs" />
+    <Compile Include="DAO\IDAO\IOrderStatusRepository.cs" />
     <Compile Include="DAO\IDAO\IPermissionRepository.cs" />
     <Compile Include="DAO\IDAO\IPersonalInfoRepository.cs" />
     <Compile Include="DAO\IDAO\IProductCategoryRepository.cs" />
