--- a/Solution/ContosoProject/Data/App.config
+++ b/Solution/ContosoProject/Data/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ContosoContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\DataBases\Contoso.mdf;Initial Catalog=ContosoDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+    <add name="ContosoContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=ContosoDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
