--- a/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
+++ b/Solution/ContosoProject/ContosoUI/ContosoUI.csproj
@@ -216,6 +216,8 @@
     <None Include="packages.config" />
     <None Include="Properties\DataSources\ContosoUI.Customers.Search.CustomersListViewModel.datasource" />
     <None Include="Properties\DataSources\ContosoUI.EditUserForm.UserReportViewModel.datasource" />
+    <None Include="Properties\DataSources\ContosoUI.Order.AddEdit.AddEditViewModel.datasource" />
+    <None Include="Properties\DataSources\ContosoUI.Order.Search.SearchViewModel1.datasource" />
     <None Include="Properties\DataSources\ContosoUI.Users.Edit.UserEditPresenter.datasource" />
     <None Include="Properties\DataSources\Data.DumbData.Storage.datasource" />
     <None Include="Properties\DataSources\Data.EFData.PermissionDao.datasource" />
