--- a/Solution/ContosoProject/Data/Data.csproj
+++ b/Solution/ContosoProject/Data/Data.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Migrations\201511031214147_Init.Designer.cs">
       <DependentUpon>201511031214147_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511031420293_Vbre.cs" />
+    <Compile Include="Migrations\201511031420293_Vbre.Designer.cs">
+      <DependentUpon>201511031420293_Vbre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -107,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201511031214147_Init.resx">
       <DependentUpon>201511031214147_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511031420293_Vbre.resx">
+      <DependentUpon>201511031420293_Vbre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
